<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aab.medicare.SettingActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_home" />

	<TextView
        android:id="@+id/txt_engine_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" 
        android:textColor="@color/txtBiru"
        android:text="@string/txt_profile1" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/txt_profile2"
        android:textColor="@color/txtBiru" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />
    
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/txt_profile3"
        android:textColor="@color/txtBiru" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/txt_profile4"
        android:textColor="@color/txtBiru" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />
    
    <TextView
        android:id="@+id/txtHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/txt_profile5"
        android:textColor="@color/txtBiru" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/White"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txt_profile6"
            android:textColor="@color/txtBiru" />

        <ImageView
            android:id="@+id/img_profile_birth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:padding="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/White"
            android:src="@drawable/icon_calendar" />

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtSIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/White"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txt_profile7"
            android:textColor="@color/txtBiru" />
        
        <ImageView
            android:id="@+id/img_profile_SIM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:padding="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/White"
            android:src="@drawable/icon_calendar" />

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <Button
        android:id="@+id/btnNextProfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickProfile"
        android:text="Next" />
    
</LinearLayout>
