<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aab.medicare.SettingActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_home" />

	<TextView
        android:id="@+id/txt_profile_insurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" 
        android:textColor="@color/txtBiru"
        android:text="@string/txt_profile14" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <TextView
        android:id="@+id/txt_policy_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" 
        android:textColor="@color/txtBiru"
        android:text="@string/txt_profile15" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />
    
    <TextView
        android:id="@+id/txt_insurance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" 
        android:textColor="@color/txtBiru"
        android:text="@string/txt_profile16" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_ppf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/White"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txt_profile17"
            android:textColor="@color/txtBiru" />

        <ImageView
            android:id="@+id/img_ppf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:padding="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/White"
            android:src="@drawable/icon_calendar" />

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_ppt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/White"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txt_profile18"
            android:textColor="@color/txtBiru" />
        
        <ImageView
            android:id="@+id/img_ppt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:padding="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/White"
            android:src="@drawable/icon_calendar" />

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />
    
    <TextView
        android:id="@+id/txt_coverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" 
        android:textColor="@color/txtBiru"
        android:text="@string/txt_profile19" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <Button
        android:id="@+id/btnGoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickProfile3"
        android:text="Go Home" />
    
</LinearLayout>
