<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aab.medicare.SettingActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="@color/White">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/header_home" />

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_profile_registration1"
            android:textColor="@color/txtBiru"
            android:textSize="12dp" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <EditText
            android:id="@+id/txt_engine_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/editTextBackground"
            android:ems="10"
            android:hint="@string/txt_profile_registration2"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/txtBiru" >

            <requestFocus />
        </EditText>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <EditText
            android:id="@+id/txt_chassis_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_profile_registration3"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/txtBiru" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />
    </LinearLayout>

   <!--  <RadioButton
        android:id="@+id/rb_profile_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_profile_registration4"
        android:textColor="@color/txtBiru"
        android:textSize="12sp" />
    -->

    <Switch
        android:id="@+id/onOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSwitchRegister" 
        tools:ignore="NewApi"/>

    <Button
        android:id="@+id/btnSubmitRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit" 
        android:onClick="onClickRegister"/>

    <RelativeLayout
        android:id="@+id/rl_pb"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar 
            android:id="@+id/pd_splash_indicator" 
		  	style="@android:style/Widget.ProgressBar.Large.Inverse" 
		  	android:layout_height="45dp" 
		  	android:layout_width="45dp" 
		  	android:layout_centerHorizontal="true"
		  	android:layout_centerVertical="true" 
		  	android:visibility="gone" >
        </ProgressBar>

    </RelativeLayout>
</LinearLayout>
